@@ -287,7 +287,7 @@ TEST(TestQuerySubtable)
     q1->greater(0, 200);
     q1->subtable(2);
     q1->less(0, 50);
-    q1->parent();
+    q1->end_subtable();
     TableView t1 = q1->find_all(*table, 0, (size_t)-1);
     CHECK_EQUAL(2, t1.size());
     CHECK_EQUAL(1, t1.get_source_ndx(0));
@@ -300,7 +300,7 @@ TEST(TestQuerySubtable)
     q2->greater(0, 50);
     q2->Or();
     q2->less(0, 20);
-    q2->parent();
+    q2->end_subtable();
     TableView t2 = q2->find_all(*table, 0, (size_t)-1);
     CHECK_EQUAL(2, t2.size());
     CHECK_EQUAL(0, t2.get_source_ndx(0));
@@ -313,7 +313,7 @@ TEST(TestQuerySubtable)
     q3->greater(0, 50);
     q3->Or();
     q3->less(0, 20);
-    q3->parent();
+    q3->end_subtable();
     q3->less(0, 300);
     TableView t3 = q3->find_all(*table, 0, (size_t)-1);
     CHECK_EQUAL(1, t3.size());
@@ -328,7 +328,7 @@ TEST(TestQuerySubtable)
     q4->greater(0, 50);
     q4->Or();
     q4->less(0, 20);
-    q4->parent();
+    q4->end_subtable();
     TableView t4 = q4->find_all(*table, 0, (size_t)-1);
     delete q4;
 
